# astroapiclient

./: CHANGELOG.md  CONTRIBUTING.md  README.md  app-function-1.ipynb  app-function-1.py  app-function-2.ipynb  app-function-2.py  app-function-3.ipynb  app-function-3.py  app-function-4.ipynb  build_dataset.ipynb  final_proj_proposal.ipynb  generate_data.ipynb  generate_data.py  pyproject.toml
.ipynb_checkpoints/: app-function-2-checkpoint.ipynb  build_dataset-checkpoint.ipynb  final_proj_proposal-checkpoint.ipynb  generate_data-checkpoint.ipynb
astroapipkg/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
astroapipkg/docs/: Makefile  conf.py  example.ipynb  make.bat
astroapipkg/src/astroapipkg/: __init__.py
astroapipkg/tests/: test_astroapipkg.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/astroapiclient/: __init__.py  app-function-1.ipynb  app-function-2.ipynb  app-function-3.ipynb  app-function-4.ipynb  app-function-4.py  app_function_1.py  app_function_2.py  app_function_3.py  app_function_4.py  build_dataset.ipynb  build_dataset.py  final_proj_proposal.ipynb  generate_data.ipynb  generate_data.py
tests/: test_astroapiclient.py
