[tool.poetry]
name = "astroapipkg"
version = "0.1.0"
description = "A package that makes requests, builds, and interects with astrological data!"
authors = ["sairachawla <sairachawla@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
