[tool.poetry]
name = "astroapiclient"
version = "0.1.0"
description = "A package based around an astrology api from rapidapi.com!"
authors = ["Saira Chawla"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.23.5"
regex = "^2022.10.31"
requests = "^2.28.1"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
